--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -15,14 +15,36 @@ body {
 
 body {
   position: absolute;
-  width: 80%;
+  width: 85%;
   left: 10%;
   top: 5%;
 }
 
+.dashboard
+{
+  width: 90%;
+}
+
 div.banner {
-  padding: 20px;
-  margin-top: 60px;
+  margin-top: 5px;
+}
+
+.home_new_list_container
+{
+  margin-top: 18px;
+  margin-right: 6.5%;
+}
+
+.home_new_list_button
+{
+  margin: auto;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.your_lists_heading
+{
+  margin-left: 25px;
 }
 
 form {
