--- a/src/css/todo_style.css
+++ b/src/css/todo_style.css
@@ -143,3 +143,19 @@ div.banner {
   font-weight: bold;
   font-size: 24pt;
 }
+
+.list_item_card_description {
+  font-weight: bold;
+  font-size: 18pt;
+}
+
+.list_item_card_assigned_to, .list_item_card_due_date, 
+.list_item_card_completed {
+  font-weight: normal;
+  font-size: 14pt;
+}
+
+.assigned_to
+{
+  font-weight: bold;
+}
