--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -121,6 +121,16 @@ div.banner {
   padding: 3%
 }
 
+.item_form_submit_button, .item_form_cancel_button
+{
+    border-radius: 8px;
+}
+
+.item_form_cancel_button
+{
+  margin-left: 8px;
+}
+
 form {
   padding: 20px;
   margin-top: 60px;
